<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_topic_list_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/wallpaper"
    tools:context="com.example.denizalp.thefirst.TopicListPage">

    <Button android:id="@+id/Button_Recent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recentTopics"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        />

    <Button android:id="@+id/Button_Trending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trendingTopics"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Button_Recent"
        android:layout_marginTop="2sp"
        />

    <TextView android:id="@+id/Categories"
        android:text="CATEGORIES"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/Button_Trending"
        android:layout_marginTop="2sp"
        android:textColor="@color/blue"
        android:textStyle="bold"/>

    <Button android:id="@+id/Button_Art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Art"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Categories"
        android:layout_marginTop="2sp"
        />

    <Button android:id="@+id/Button_Sports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Sports"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Button_Art"
        android:layout_marginTop="2sp"
        />

    <Button android:id="@+id/Button_Technology"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Technology"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Button_Sports"
        android:layout_marginTop="2sp"
        />

    <Button android:id="@+id/Button_Photography"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Photography"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Button_Technology"
        android:layout_marginTop="2sp"
        />

    <Button android:id="@+id/Button_Music"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Music"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Button_Photography"
        android:layout_marginTop="2sp"
        />

    <Button android:id="@+id/Button_History"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/History"
        android:layout_centerHorizontal="true"
        android:background="@color/yellow"
        android:textColor="@android:color/black"
        android:layout_below="@id/Button_Music"
        android:layout_marginTop="2sp"
        />

</RelativeLayout>
